Adding in next section of Spring Boot Review

--- a/SocialMediaApplication/src/main/resources/application.properties
+++ b/SocialMediaApplication/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=SocialMediaApplication
+# This file is used to define properties for our application
+# DB Credentials
+# Since we're using H2 we are actually defining all of the properties here for the db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:~/Documents/250210/250210-JavaReactAWS-Notes-Demos/social-media-db
+spring.datasource.username=sa
+spring.datasource.password=sa
+
+# DB settings
+# DDL-Auto Property -> Defines how the DDL statements will be executed
+# Create -> Drop the tables and rebuild them
+# Update -> Add on to the existing tables (use this by default)
+# Validate -> Makes sure you have the schema that matches the db
+# None -> Nothing
+spring.jpa.hibernate.ddl-auto=update
+
+# Server setting
+
+# Any other settings as well
+# I'll enable the h2 console so we can see the data in the db on the web
+spring.h2.console.enabled=true
